# AI-Agents-Projects

./: .gitignore  pyproject.toml  requirements.txt
cv_generator/: main.py
email_agent/: agent.py  chatbot_ui.py  demo_email.txt  emails.py
rag_agents/agent_with_astradb/: main.py  model_config.py  requirements.txt
rag_agents/agent_with_astradb/astra/: connection.py  create_collection.py  data_preparation.py  insert_to_collection.py  retriever.py
rag_agents/agent_with_astradb/documents/: docs.json
rag_agents/agent_with_qdrant/: main.py  model_config.py  requirements.txt
rag_agents/agent_with_qdrant/qdrant/: connection.py  create_collection.py  data_preparation.py  insert_to_collection.py  retriever.py
rag_agents/ai_shopping_agent/: README.md  requirements.txt
rag_agents/ai_shopping_agent/src/: app.py  main.py
rag_agents/ai_shopping_agent/src/config/: model.py
rag_agents/ai_shopping_agent/src/multi_agents/: general_faqs_agent.py  product_recommendation_agent.py  triage_agent.py
rag_agents/ai_shopping_agent/src/rag/: loader.py  retriever.py
rag_agents/ai_shopping_agent/src/tools/: get_product_data.py  rag_tool.py
resume_evaluator_agent/: README.md  app.py  main.py  requirements.txt  resume_evalutor_agent_demo.webm  schema.py
twillio_whatsapp_chatbot/: agent.py  main.py
weather_agent/: agent.py  chatbot_ui.py
